# OpenCL-To-OpenGL-Interoperability-Android

./: build.gradle  local.properties
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/: a.txt  out148Yonly.yuv
app/src/main/assets/shaders/: 2xbr-1.shader  2xbr.shader  4xbr.shader  grayscale.shader  hq2x.shader  hq4x.shader  lcd3x.shader  motion-blur.shader  quilez.shader  sabr.shader  scanlines.shader
app/src/main/cpp/: cl_egl_sync.cpp  cl_wrapper.cpp  gl_code.cpp  libopencl.c  util.cpp
app/src/main/java/com/android/gl2jni/: GL2JNIActivity.java  GL2JNILib.java  (+1 more)
app/src/main/jniIncludes/: cl_code.h  cl_egl_sync.h  cl_wrapper.h  libopencl.h  speckle_utils.h  util.h
app/src/main/jniIncludes/CL/: cl.h  cl.hpp  cl2.hpp  cl_egl.h  cl_ext.h  cl_ext_qcom.h  cl_gl.h  cl_gl_ext.h  cl_platform.h  opencl.h
app/src/main/jniIncludes/opencv2/: aruco.hpp  cvconfig.h  dnn_superres.hpp  intensity_transform.hpp  opencv_modules.hpp  rapid.hpp  rgbd.hpp  tracking.hpp  xfeatures2d.hpp  ximgproc.hpp
app/src/main/jniIncludes/opencv2/aruco/: charuco.hpp
app/src/main/jniIncludes/opencv2/dnn/: dnn.hpp
app/src/main/jniIncludes/opencv2/flann/: hdf5.h
app/src/main/jniIncludes/opencv2/optflow/: rlofflow.hpp
app/src/main/jniIncludes/opencv2/rgbd/: depth.hpp  dynafu.hpp  kinfu.hpp
app/src/main/jniIncludes/opencv2/text/: ocr.hpp
app/src/main/jniIncludes/opencv2/tracking/: tracking_by_matching.hpp
app/src/main/jniIncludes/opencv2/ximgproc/: sparse_match_interpolator.hpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
(+2 files in other folders)
